fix - change z-index to allow links to be clickable

--- a/root/frontend/src/components/CreateListModal/CreateListModal.css
+++ b/root/frontend/src/components/CreateListModal/CreateListModal.css
@@ -3,7 +3,7 @@
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.2);
-  z-index: 0;
+  z-index: 2;
   display: flex;
   align-items: center;
   justify-content: center;
