--- a/root/frontend/src/pages/MultiListView/MultiListView.css
+++ b/root/frontend/src/pages/MultiListView/MultiListView.css
@@ -1,6 +1,6 @@
 article {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 .mlv-header {
   position: sticky;
@@ -25,7 +25,7 @@ article {
   top: (max(15vh, 125px));
   left: 2.5vh;
   right: 7.5vh;
-  z-index: -1;
+  z-index: 1;
 }
 .mlv-title {
   font-family: "Patrick Hand SC", cursive;
